Time: 26 ms (50.48%) | Memory: 55.5 MB (89.92%) - LeetSync