@@ -1,6 +1,7 @@
 class Solution {
     public List<Integer> findMinHeightTrees(int n, int[][] edges) {
         if (n == 1) return Collections.singletonList(0);
+
         List<Integer>[] adjList = new ArrayList[n];
 
         for (int i = 0; i < n; i++) adjList[i] = new ArrayList<>();
@@ -20,19 +21,21 @@ class Solution {
 
         while (rem > 2) {
             rem -= leaves.size();
+            
             List<Integer> newLeaves = new ArrayList<>();
 
             for (int leaf : leaves) {
-                int nei = adjList[leaf].get(0);
+                int nei = adjList[leaf].getFirst();
                 adjList[nei].remove(Integer.valueOf(leaf));
-
                 if (adjList[nei].size() == 1) {
                     newLeaves.add(nei);
                 }
             }
+
             leaves = newLeaves;
         }
-
+        
         return leaves;
     }
+
 }
